--- a/src/main/resources/static/app/dashboard/dashboard.html
+++ b/src/main/resources/static/app/dashboard/dashboard.html
@@ -74,13 +74,18 @@ Coded by www.creative-tim.com
 		<script type="text/javascript" src="/app/devices/devices.js"></script>
 		<script type="text/javascript" src="/app/devices/entities/Device.js"></script>
 		<script type="text/javascript" src="/app/devices/entities/DevicesCapabilities.js"></script>
+		<script type="text/javascript" src="/app/devices/entities/DeviceCapabilities.js"></script>
+		
+		<!-- Cameras -->
 		<script type="text/javascript" src="/app/devices/cameras/cameras.js"></script>
 		<script type="text/javascript" src="/app/devices/cameras/controllers/GetCamerasController.js"></script>
 		<script type="text/javascript" src="/app/devices/cameras/controllers/InstallCameraController.js"></script>
 		<script type="text/javascript" src="/app/devices/cameras/services/CameraAPIService.js"></script>
-		<script type="text/javascript" src="/app/devices/cameras/entities/HTTPCamera.js"></script>
+		<script type="text/javascript" src="/app/devices/cameras/entities/HttpCamera.js"></script>
 		<script type="text/javascript" src="/app/devices/cameras/entities/Camera.js"></script>
 		<script type="text/javascript" src="/app/devices/cameras/entities/CameraCapabilities.js"></script>
+		
+		<!-- Transductors -->
 		<script type="text/javascript" src="/app/devices/transductors/transductors.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/controllers/InstallTransductorController.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/entities/Transductor.js"></script>
@@ -102,6 +107,16 @@ Coded by www.creative-tim.com
 		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/Actuator.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/ActuatorValues.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/ActuatorValue.js"></script>
+
+		<!-- Notifications -->
+		<script type="text/javascript" src="/app/devices/gpses/gpses.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/controllers/GetGpsesController.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/controllers/InstallGpsController.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/services/GpsAPIService.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/entities/MqttGps.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/entities/Gps.js"></script>
+		<script type="text/javascript" src="/app/devices/gpses/entities/GpsCapabilities.js"></script>
+		
 
 		<!-- Notifications -->
 		<script type="text/javascript" src="/app/notifications/notifications.js"></script>		
