--- a/src/main/resources/static/app/dashboard/shared/sidebarNav.html
+++ b/src/main/resources/static/app/dashboard/shared/sidebarNav.html
@@ -21,6 +21,12 @@
                   </a>
                 </li>
                 <li>
+                  <a href="#/gpses">
+                    <span class="sidebar-mini-icon">GS</span>
+                    <span class="sidebar-normal">GPS</span>
+                  </a>
+                </li>
+                <li>
                   <a href="#/cameras">
                     <span class="sidebar-mini-icon">CA</span>
                     <span class="sidebar-normal">Cameras</span>
@@ -68,7 +74,7 @@
                 </li>
                 <li>
                   <a href="#/installChart">
-                    <span class="sidebar-mini-icon">CH</span>
+                    <span class="sidebar-mini-icon">IC</span>
                     <span class="sidebar-normal">Install chart</span>
                   </a>
                 </li>
@@ -79,8 +85,14 @@
                   </a>
                 </li>
                 <li>
+                  <a href="#/installGps">
+                    <span class="sidebar-mini-icon">IG</span>
+                    <span class="sidebar-normal">Install gps</span>
+                  </a>
+                </li>
+                <li>
                   <a href="#/installCamera">
-                    <span class="sidebar-mini-icon">SR</span>
+                    <span class="sidebar-mini-icon">IC</span>
                     <span class="sidebar-normal">Install camera</span>
                   </a>
                 </li>
