--- a/src/main/resources/static/app/sensorrules/alarmsensorrulespanel.html
+++ b/src/main/resources/static/app/sensorrules/alarmsensorrulespanel.html
@@ -50,7 +50,7 @@
                {{alarmSensorRule.getSensorAnalogThresholdOperator()}}  
              </td>
              <td class="text-center">
-                {{alarmSensorRule.getSensorValueThreshold()}}   
+                {{alarmSensorRule.getSensorValueThresholdString()}}   
              </td>
              <td class="text-right">
              	<span ng-switch="alarmSensorRule.isEnabled()">
