--- a/src/main/resources/static/app/sensorrules/camerasensorrulespanel.html
+++ b/src/main/resources/static/app/sensorrules/camerasensorrulespanel.html
@@ -53,7 +53,7 @@
                {{cameraSensorRule.getSensorAnalogThresholdOperator()}}  
              </td>
              <td class="text-center">
-                {{cameraSensorRule.getSensorValueThreshold()}}   
+                {{cameraSensorRule.getSensorValueThresholdString()}}   
              </td>
              <td class="text-center">
                 {{cameraSensorRule.getCameraName()}}   
