--- a/src/main/resources/static/app/sensorrules/enablerulerulespanel.html
+++ b/src/main/resources/static/app/sensorrules/enablerulerulespanel.html
@@ -56,7 +56,7 @@
                {{enableSensorRule.getSensorAnalogThresholdOperator()}}
              </td>
              <td class="text-center">
-                {{enableSensorRule.getSensorValueThreshold()}}
+                {{enableSensorRule.getSensorValueThresholdString()}}
              </td>
              <td ng-if="enableSensorRule.isEnableAction()" class="text-center">
                 Enable
