--- a/src/main/resources/static/app/sensorrules/triggeractuatorsensorrulespanel.html
+++ b/src/main/resources/static/app/sensorrules/triggeractuatorsensorrulespanel.html
@@ -59,7 +59,7 @@
                {{triggerActuatorSensorRule.getSensorAnalogThresholdOperator()}}  
              </td>
              <td class="text-center">
-                {{triggerActuatorSensorRule.getSensorValueThreshold()}}   
+                {{triggerActuatorSensorRule.getSensorValueThresholdString()}}   
              </td>
               <td class="text-center">
                {{triggerActuatorSensorRule.getActuatorName()}}  
@@ -68,7 +68,7 @@
                {{triggerActuatorSensorRule.getActuatorPropertyName()}}  
              </td>
              <td class="text-center">
-               {{triggerActuatorSensorRule.getActuatorSetValue()}}  
+               {{triggerActuatorSensorRule.getActuatorSetValueString()}}  
              </td>
              <td class="text-right">
              	<span ng-switch="triggerActuatorSensorRule.isEnabled()">
