--- a/src/main/resources/static/app/charts/chartInstallation.html
+++ b/src/main/resources/static/app/charts/chartInstallation.html
@@ -1,4 +1,4 @@
-
+<script src="/app/libraries/plugins/wizard.js"></script>
 <div class="col-md-10 mr-auto ml-auto">
 	<div class="wizard-container">
 		<div class="card card-wizard" data-color="primary" id="wizardProfile">
